feature: Creacion helper y controlador para manejar funcionalidad de filtrar los pagos por varios parametros, udistrital/Cumplidos_y_certificaciones_documentacion#3
